@@ -208,10 +208,6 @@ regmatch_t regmatches[10];
 
 int reverse_attr = A_REVERSE;
 	/* The curses attribute we use for reverse video. */
-bool curses_ended = FALSE;
-	/* Whether endwin() has ended curses mode and statusbar()
-	 * should hence write to stderr instead of displaying on the
-	 * statusbar. */
 
 char *homedir = NULL;
 	/* The user's home directory, from $HOME or /etc/passwd. */
